# phone-store

./: .gitignore
bot/: .env.example  pyproject.toml
bot/app/: bot.py  config.py  keyboards.py
core/: .env.example  pyproject.toml
core/app/: config.py  db.py  deps.py  deps_bot.py  main.py  models.py  security.py
core/app/routers/: auth.py  catalog.py  init.py  inventory.py  leads.py  me.py  reports.py
phone-store-api/: phone-store-api.php
